--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-day-picker": "^7.4.0",
     "react-dom": "^16.13.0",
-    "react-redux": "^7.2.0",
-    "react-scripts": "3.4.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
