--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^16.13.0",
     "react-day-picker": "^7.4.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-loader-spinner": "^3.1.5",
+    "react-scripts": "3.4.0",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
